[tool.poetry]
name = "jhansi"
version = "0.2.0"
description = "A minimal procedural language designed for systems programming - including operating systems."
authors = ["Arun Raghunath <arun@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "jhansi"}]
[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0"
mypy = "^1.10"
ruff = "^0.4"

[tool.ruff]
target-version = "py312"
line-length = 88
 
[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking — moves TYPE_CHECKING-only imports
    "ANN", # flake8-annotations — enforces type hints
    "RUF", # ruff-specific rules
]

[tool.ruff.lint.isort]
known-first-party = ["jhansi"]
 
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
 
# ---------------------------------------------------------------------------
# Mypy — strict
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
show_error_codes = true
pretty = true
 
# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
